@@ -51,3 +51,4 @@ solo/spvm_build/*
 !solo/spvm_build/.gitkeep
 t/default/lib/UseAllTestCase.spvm
 SPVM.def
+.spvm_build
