@@ -1,3 +1,5 @@
+BEGIN { $ENV{SPVM_BUILD_DIR} = '.spvm_build' }
+
 use lib "t/lib";
 use TestAuto;
 
